<resources>
    <string name="app_name">Programmer Pocket Library</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
    <string name="sig_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_account">Have an account? Login Now</string>
</resources>