<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="logo"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_computer_24"
         />

    <EditText
        android:id="@+id/emailLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/et_bg"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
         />
    <EditText
        android:id="@+id/passwordLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:drawableEnd="@drawable/ic_eye"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_2"
        android:backgroundTint="@color/white"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:onClick="onClickLogIn"
        android:textColor="@color/login_form_details_medium"
        />
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="4dp"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        style="?android:attr/progressBarStyleLarge"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
         />

    <View
        android:id="@+id/line1"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="-6dp"
        android:layout_gravity="center"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:layout_marginTop="-15dp"
        android:layout_gravity="right"
        android:background="@color/login_form_details_medium"
       />

    <TextView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="8dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_if_square_facebook"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/login_form_details"
        android:textStyle="bold"
        />

    <View
        android:id="@+id/footer_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        />

    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/login_form_details"
        android:layout_gravity="center"
        android:onClick="dontHaveAccount"
        />





</LinearLayout>