<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:padding="16dp"
    tools:context=".SignUP">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:contentDescription="logo"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_computer_24"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/sign_up_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="clear_text"
        android:textColorHint="@color/login_form_details"
        android:hint="Email address"
        app:hintTextAppearance="?attr/textAppearanceCaption"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="?attr/colorOnSurface"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:background="@drawable/et_bg"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/password"
        android:hint="@string/password"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        android:layout_width="match_parent"
        android:textColorHint="@color/login_form_details"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:background="@drawable/et_bg"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password"
        app:hintTextColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle"
        android:layout_width="match_parent"
        android:textColorHint="@color/login_form_details"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:background="@drawable/et_bg"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_2"
        android:text="@string/sig_up"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:onClick="onClickSignUp"
        android:textColor="@color/login_form_details_medium"
        >

    </com.google.android.material.button.MaterialButton>
    <ProgressBar
        android:id="@+id/progressBars"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="-60dp"
        android:layout_marginRight="4dp"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        style="?android:attr/progressBarStyleLarge"


    />
    <View
        android:id="@+id/footer_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:background="#fff"

    />


    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/have_account"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        android:onClick="haveAccount"
    />


</LinearLayout>